<resources>
    <string name="app_name">Camera Beautify</string>
    <string name="filter_none">Original</string>
    <string name="filter_antique">Antique</string>
    <string name="filter_cool">Cool</string>
    <string name="filter_emerald">Emerald</string>
    <string name="filter_evergreen">Evergreen</string>
    <string name="filter_healthy">Healthy</string>
    <string name="filter_nostalgia">Nostalgia</string>
    <string name="filter_crayon">Crayon</string>

    <string name="folderName">Folder Name</string>
    <string name="appName">showfixfolder</string>
    <string name="empty">No Images on this device</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frg_setting_sd_detail">The photos are saved in SD Card</string>
    <string name="frg_setting_shutter_sound">Shutter Sound</string>
    <string name="developer_information">Developer Info</string>
    <string name="short_des_Dev_info">Application Developers information</string>
    <string name="about">About</string>
    <string name="about_app">About Application</string>
    <string name="channel_name">CameraBeautify</string>
    <string name="channel_description">service</string>
</resources>
