<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectanguler_shape"
    android:orientation="vertical"
    android:paddingTop="0dp"
    android:id="@+id/idMoreLayout">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/llt_setting_header">

                <TextView
                    android:textColor="@color/white"
                    style="@style/txt_setting_header"
                    android:text="Settings" />
            </LinearLayout>


            <LinearLayout style="@style/llt_setting_content">

                <ImageView
                    style="@style/img_setting_content"
                    android:src="@drawable/ico_shutter_sound" />

                <LinearLayout style="@style/llt_setting_content_spec" >
                    <TextView
                        android:textColor="@color/white"
                        style="@style/txt_setting_content"
                        android:text="@string/frg_setting_shutter_sound" />

                    <TextView
                        android:textColor="@color/white"
                        style="@style/txt_setting_content_detail"
                        android:text="@string/frg_setting_shutter_sound" />
                </LinearLayout>

                <Switch
                    android:id="@+id/swt_setting_shutter_sound"
                  style="@style/swi_setting_content" />
            </LinearLayout>

            <LinearLayout style="@style/llt_setting_spec" />


            <LinearLayout
                android:id="@+id/idDev_info"
                style="@style/llt_setting_content">

                <ImageView
                    style="@style/img_setting_content"
                    android:src="@drawable/icon_dev_info_white" />

                <LinearLayout style="@style/llt_setting_content_spec" >
                    <TextView
                        android:textColor="@color/white"
                        style="@style/txt_setting_content"
                        android:text="@string/developer_information" />

                    <TextView
                        style="@style/txt_setting_content_detail"
                        android:text="@string/short_des_Dev_info"
                        android:textColor="@color/white" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/llt_setting_spec" />

            <LinearLayout
                android:id="@+id/llt_About_layout"
                style="@style/llt_setting_content">

                <ImageView
                    style="@style/img_setting_content"
                    android:src="@drawable/icon_about_white" />

                <LinearLayout style="@style/llt_setting_content_spec" >
                    <TextView
                        android:textColor="@color/white"
                        style="@style/txt_setting_content"
                        android:text="@string/about" />

                    <TextView
                        android:textColor="@color/white"
                        style="@style/txt_setting_content_detail"
                        android:text="@string/about_app" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/llt_setting_spec" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
